authentication using jwt working
